# haskell-playground

fastmail-processor/: CHANGELOG.md  fastmail-processor.cabal  package.yaml  stack.yaml
fastmail-processor/app/: Main.hs
fastmail-processor/src/: Fastmail.hs  Lib.hs
free-monad/: CHANGELOG.md  free-monad.cabal  package.yaml
free-monad/app/: Main.hs
free-monad/src/: Lib.hs
json-parser/: LICENSE  json-parser.cabal
json-parser/app/: Main.hs
json-parser/lib/: MyLib.hs
redis/: .gitignore  CHANGELOG.md  redis.cabal
redis/app/: Engine.hs  Main.hs
redis/lib/: CommandHandlers.hs  Control.hs  Resp.hs
