cabal-version:      3.0
name:               json-parser
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Hao Nguyen
maintainer:         hao.nguyen1214@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1,
        containers
    hs-source-dirs:   lib
    default-language: Haskell2010

executable json-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        json-parser

    hs-source-dirs:   app
    default-language: Haskell2010
